Revert "make changes related to positioning elements on a web page"
This reverts commit 9b27d9ed30704677911e75f0bc5d4fe04889d528.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
   </head>
   <body class="main-flex-wrapper">
     <header class="header">
-      <div class="logo">
-        <span class="company-logo">
-          <img src="img/logo.svg" alt="Gllacy Shop Logo">
-        </span>
-      </div>
+      <span class="company-logo">
+        <img src="img/logo.svg" alt="Gllacy Shop Logo">
+      </span>
       <nav>
         <ul class="main-navigation">
             <li><a href="catalog.html">Каталог</a>
@@ -29,19 +27,17 @@
             <li><a href="#">О компании</a></li>
         </ul>
       </nav>
-      <div class="site-functionality">
-        <ul class="search-login-cart">
-          <li>
-            <button class="button"><img src="img/Search.png" alt="search item"></button>
-          </li>
-          <li>
-            <button class="button" type="button"><img class="entrance" src="img/entrance.svg" alt="login">Вход</button>
-          </li>
-          <li>
-            <a href="img/basket.svg">Пусто</a>
-          </li>
-        </ul>
-      </div>
+      <ul class="search-login-cart">
+        <li>
+          <button class="button"><img src="img/Search.png" alt="search item"></button>
+        </li>
+        <li>
+          <button class="button" type="button"><img class="entrance" src="img/entrance.svg" alt="login">Вход</button>
+        </li>
+        <li>
+          <a href="img/basket.svg">Пусто</a>
+        </li>
+      </ul>
     </header>
     <main class="main">
       <section class="hero-banner">
@@ -49,8 +45,9 @@
           <span class="work-hours">С 10 до 20, ежедневно</span>
           <span class="contact-number">8 812 450-25-25</span>
         </div>
-        <div class="hero-image">
-          <img src="img/cones.png" alt="cones">
+        <div class="cone-bkg">
+          <div class="cone1"></div>
+          <div class="cone2"></div>
         </div>
         <section class="title-and-action-btn">
           <h1 class="page-title">Крем-брюле и пломбир с малиновым джемом</h1>
@@ -104,34 +101,26 @@
           </li>
         </ul>
       </section>
-      <article class="competitive-advantages waffle-bkg">
-        <h2 class="header-h2">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
-          собственного производства на развес</h2>
-        <section class="advantages">
-          <div class="advantage">
-            <img src="img/ice-cream.svg" alt="ice cream icon">
-            <p>Все наше мороженое изготавливается на собственном производстве, с
-              использованием современного оборудования и проверенных временем
-              технологий.</p>
-          </div>
-          <div class="advantage">
-            <img src="img/eco.svg" alt="leaf icon">
-            <p>Для приготовления мороженого используются настоящие сливки и молоко
-              высочайшего качества. Все дополнительные ингредиенты и добавки
-              произведены из натурального, экологически чистого сырья.</p>
-          </div>
-          <div class="advantage">
-            <img src="img/cow.svg" alt="cow icon">
-            <p>Закупка ингредиентов  производится только у проверенных фермерских
-              хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-          </div>
-          <div class="advantage">
-            <img src="img/thermometer.svg" alt="thermometer icon">
-            <p>Доставка нашего мороженого до заказчиков осуществляется в специальном
-              термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
-          </div>
-        </section>
-      </article>
+      <section class="competitive-advantages">
+        <article class="waffle-bkg">
+          <h2 class="header-h2">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
+            собственного производства на развес</h2>
+          <img src="img/ice-cream.svg" alt="ice cream icon">
+          <p>Все наше мороженое изготавливается на собственном производстве, с
+            использованием современного оборудования и проверенных временем
+            технологий.</p>
+          <img src="img/eco.svg" alt="leaf icon">
+          <p>Для приготовления мороженого используются настоящие сливки и молоко
+            высочайшего качества. Все дополнительные ингредиенты и добавки
+            произведены из натурального, экологически чистого сырья.</p>
+          <img src="img/cow.svg" alt="cow icon">
+          <p>Закупка ингредиентов  производится только у проверенных фермерских
+            хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+          <img src="img/thermometer.svg" alt="thermometer icon">
+          <p>Доставка нашего мороженого до заказчиков осуществляется в специальном
+            термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+        </article>
+      </section>
       <section class="news-and-subscribtion">
         <section class="news strawberry-bkg">
           <h3 class="header-h3">Новое в нашем блоге</h3>
