add more styles for flexbox layout

--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
         </section>
       </article>
       <section class="news-and-subscribtion">
-        <section class="news strawberry-bkg">
+        <section class="news strawberry-bkg promo-banner">
           <h3 class="header-h3">Новое в нашем блоге</h3>
           <h4 class="header-h4">10 способов сервировки фруктовых щербетов к столу</h4>
         </section>
-        <section class="subscribe striped-bkg">
+        <section class="subscribe promo-banner">
           <p class="subscribe-text">Подпишитесь на нашу сладкую рассылку и будете
             всегда в курсе всего самого вкусного, что у нас происходит. Обещаем
             не спамить и не слать всякой ненужной ерунды. Честно =) </p>
