--- a/catalog.html
+++ b/catalog.html
@@ -9,9 +9,11 @@
   </head>
   <body class="main-flex-wrapper">
     <header class="header">
-      <span class="company-logo">
-        <img src="img/logo.svg" alt="Gllacy Shop Logo">
-      </span>
+      <div class="logo">
+        <span class="company-logo">
+          <img src="img/logo.svg" alt="Gllacy Shop Logo">
+        </span>
+      </div>
       <nav>
         <ul class="main-navigation">
             <li><a href="catalog.html">Каталог</a>
@@ -27,21 +29,19 @@
             <li><a href="#">О компании</a></li>
         </ul>
       </nav>
-      <ul class="search-login-cart">
-        <li>
-          <button type="button"><img src="img/search.png" alt="search item"></button>
-        </li>
-        <li>
-          <button type="button"><img src="img/entrance.svg" alt="login">Вход</button>
-        </li>
-        <li>
-          <a class="cart-info" href="img/basket-red.svg">2 товара</a>
-        </li>
-      </ul>
-      <section class="">
-        <span>С 10 до 20, ежедневно</span>
-        <span>8 812 450-25-25</span>
-      </section>
+      <div class="site-functionality">
+        <ul class="search-login-cart">
+          <li>
+            <button class="button"><img src="img/Search.png" alt="search item"></button>
+          </li>
+          <li>
+            <button class="button" type="button"><img class="entrance" src="img/entrance.svg" alt="login">Вход</button>
+          </li>
+          <li>
+            <a href="img/basket.svg">Пусто</a>
+          </li>
+        </ul>
+      </div>
     </header>
     <main class="main">
       <section class="title-and-breadcrumbs">
