hide nested dropdown, add styles for main navigation styling, edit visually hidden css rule,

--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
       <nav>
         <ul class="main-navigation">
             <li><a href="catalog.html">Каталог</a>
-              <ul>
+              <ul class="catalog-dropdown visually-hidden">
                 <li><a href="#">Новинки</a></li>
                 <li><a href="#">Сливочное</a></li>
                 <li><a href="#">Щербеты</a></li>
