--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       </div>
       <nav>
         <ul class="main-navigation">
-            <li><a href="catalog.html">Каталог</a>
-              <ul>
+            <li><a href="catalog.html"  target="_blank">Каталог</a>
+              <ul class="catalog-dropdown visually-hidden">
                 <li><a href="#">Новинки</a></li>
                 <li><a href="#">Сливочное</a></li>
                 <li><a href="#">Щербеты</a></li>
