work on header to prep for pixel perfect

--- a/index.html
+++ b/index.html
@@ -32,13 +32,17 @@
       <div class="site-functionality">
         <ul class="search-login-cart">
           <li>
-            <button class="button"><img src="img/Search.png" alt="search item"></button>
+            <button class="header-button">
+              <img src="img/Search.png" alt="search item">
+            </button>
           </li>
           <li>
-            <button class="button" type="button"><img class="entrance" src="img/entrance.svg" alt="login">Вход</button>
+            <button class="header-button" type="button">
+              <img class="entrance" src="img/entrance.svg" alt="login">Вход</button>
           </li>
           <li>
-            <a href="img/basket.svg">Пусто</a>
+            <button class="header-button" type="button">
+            <img class="header-button" href="img/cart.svg" alt="empty cart">Пусто</button>
           </li>
         </ul>
       </div>
