add max width and auto margins for the site content

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body class="main-flex-wrapper">
-    <header class="header">
+    <header class="header container">
       <div class="logo">
         <span class="company-logo">
           <img src="img/logo.svg" alt="Gllacy Shop Logo">
@@ -46,7 +46,7 @@
         </ul>
       </div>
     </header>
-    <main class="main">
+    <main class="main container">
       <section class="title-and-breadcrumbs">
         <a href="index.html">Главная</a> > <a href="catalog.html">Каталог</a>
          > Сливочное
@@ -152,7 +152,7 @@
         </ul>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer container">
       <ul class="social-media-contacts">
         <li><img src="img/twitter.svg" alt="twitter link"></li>
         <li><img src="img/instagram.svg" alt="instagram link"></li>
