--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body class="main-flex-wrapper">
-    <header class="header">
+    <header class="header container">
       <div class="logo">
         <span class="company-logo">
           <img src="img/logo.svg" alt="Gllacy Shop Logo">
@@ -47,7 +47,7 @@
         </ul>
       </div>
     </header>
-    <main class="main">
+    <main class="main container">
       <section class="hero-banner">
         <div class="work-hours-and-contact-number">
           <span class="work-hours">С 10 до 20, ежедневно</span>
@@ -164,7 +164,7 @@
         </section>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer container">
       <ul class="social-media-contacts">
         <li><img src="img/twitter.svg" alt="twitter link"></li>
         <li><img src="img/instagram.svg" alt="instagram link"></li>
