--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body class="main-flex-wrapper">
     <header class="header container">
       <div class="logo">
-        <span class="company-logo">
-          <img src="img/logo.svg" alt="Gllacy Shop Logo">
+        <span class="logo__content">
+          <img class="logo__image"src="img/logo.svg" alt="Gllacy Shop Logo">
         </span>
       </div>
-      <nav>
-        <ul class="main-navigation">
-            <li><a href="catalog.html"  target="_blank">Каталог</a>
-              <ul class="catalog-dropdown visually-hidden">
+      <nav class="navigation">
+        <ul class="navigation__list">
+            <li><a class="navigation__dropdown" href="catalog.html"  target="_blank">Каталог</a>
+              <ul class="navigation__dropdown-items visually-hidden">
                 <li><a href="#">Новинки</a></li>
                 <li><a href="#">Сливочное</a></li>
                 <li><a href="#">Щербеты</a></li>
@@ -30,19 +30,19 @@
         </ul>
       </nav>
       <div class="site-functionality">
-        <ul class="search-login-cart">
-          <li>
-            <button class="header-button">
-              <img src="img/Search.png" alt="search item">
+        <ul class="site-functionality__items">
+          <li class="site-functionality__search-content">
+            <button class="site-functionality__search-button header-button">
+              <img class="site-functionality__search-image" src="img/Search.png" alt="search item">
             </button>
           </li>
-          <li>
-            <button class="header-button" type="button">
-              <img class="entrance" src="img/entrance.svg" alt="login">Вход</button>
+          <li class="site-functionality__login">
+            <button class="site-functionality__login-button header-button" type="button">
+              <img class="site-functionality__login-image" src="img/entrance.svg" alt="login">Вход</button>
           </li>
-          <li>
-            <button class="header-button" type="button">
-            <img class="header-button" href="img/cart.svg" alt="empty cart">Пусто</button>
+          <li class="site-functionality__cart">
+            <button class="site-functionality__cart-button header-button" type="button">
+            <img class="site-functionality__cart-image" href="img/cart.png" alt="empty cart">Пусто</button>
           </li>
         </ul>
       </div>
