--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </ul>
       </div>
     </header>
-    <main class="main container">
-      <section class="hero-banner">
+    <main class="main">
+      <section class="hero-banner container">
         <div class="work-hours-and-contact-number">
           <span class="work-hours">С 10 до 20, ежедневно</span>
           <span class="contact-number">8 812 450-25-25</span>
@@ -66,7 +66,7 @@
           <label class="dot-controller"></label>
         </div>
       </section>
-      <section class="promo-banners">
+      <section class="promo-banners container">
         <section class="promo-banner raspberry-bkg">
           <h3 class="header-h3">Малинка даром!</h3>
           <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш
@@ -80,7 +80,7 @@
             <a href="#">Хочу шоколадки!</a>
         </section>
       </section>
-      <section class="list-of-hits">
+      <section class="list-of-hits container">
         <ul>
           <li class="hit">
             <span>HIT</span>
@@ -108,7 +108,7 @@
           </li>
         </ul>
       </section>
-      <article class="competitive-advantages waffle-bkg">
+      <article class="competitive-advantages waffle-bkg container">
         <h2 class="header-h2">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
           собственного производства на развес</h2>
         <section class="advantages">
@@ -136,7 +136,7 @@
           </div>
         </section>
       </article>
-      <section class="news-and-subscribtion">
+      <section class="news-and-subscribtion container">
         <section class="news strawberry-bkg promo-banner">
           <h3 class="header-h3">Новое в нашем блоге</h3>
           <h4 class="header-h4">10 способов сервировки фруктовых щербетов к столу</h4>
@@ -150,7 +150,7 @@
         </section>
       </section>
       <section class="main-contact-info">
-        <iframe src="https://yandex.com/map-widget/v1/-/CCsfeZKz" width="100%" height="400" frameborder="1" allowfullscreen="true"></iframe>
+        <iframe src="https://yandex.com/map-widget/v1/-/CCsfeZKz" width="100%" height="600" frameborder="1" allowfullscreen="true"></iframe>
         <!-- <img src="img/map.png">  -->
         <img src="img/pin.svg" alt="pin">
         <section class="location-info">
