add BEM classes to main content hero banner container

--- a/catalog.html
+++ b/catalog.html
@@ -47,7 +47,7 @@
         </ul>
       </div>
     </header>
-    <main class="main container">
+    <main class="main-content container">
       <section class="title-and-breadcrumbs">
         <a href="index.html">Главная</a> > <a href="catalog.html">Каталог</a>
          > Сливочное
