--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
         </ul>
       </div>
     </header>
-    <main class="main">
-      <section class="hero-banner container">
-        <div class="work-hours-and-contact-number">
-          <span class="work-hours">С 10 до 20, ежедневно</span>
-          <span class="contact-number">8 812 450-25-25</span>
+    <main class="main-content">
+      <section class="main-content__hero-banner container">
+        <div class="main-content__work-hours-and-contact-number">
+          <span class="main-content__work-hours">С 10 до 20, ежедневно</span>
+          <span class="main-content__contact-number">8 812 450-25-25</span>
         </div>
-        <div class="hero-image">
-          <img src="img/cones.png" alt="cones">
+        <div class="main-content__hero-image-container">
+          <img class="main-content__hero-image" src="img/cones.png" alt="cones">
         </div>
-        <section class="title-and-action-btn">
+        <section class="main-content__title-and-action-btn">
           <h1 class="page-title">Крем-брюле и пломбир с малиновым джемом</h1>
           <button class="button" type="button">Давайте оба!</button>
         </section>
-        <div class="image-slider-controlls">
+        <div class="main-content__image-slider-controlls">
           <label class="dot-controller"></label>
           <label class="dot-controller"></label>
           <label class="dot-controller"></label>
