add BEM classes to promo bannets and hits list containers

--- a/index.html
+++ b/index.html
@@ -66,41 +66,41 @@
           <label class="dot-controller"></label>
         </div>
       </section>
-      <section class="promo-banners container">
-        <section class="promo-banner raspberry-bkg">
-          <h3 class="header-h3">Малинка даром!</h3>
+      <section class="main-content__promo-banners container">
+        <section class="main-content__promo-banner-container raspberry-bkg">
+          <h3 class="main-content__heading-3">Малинка даром!</h3>
           <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш
             заказ банку малинового варенья бесплатно.</p>
           <a href="#">Хочу варенье!</></a>
         </section>
-        <section class="promo-banner chocolate-bkg">
-          <h3 class="header-h3">Шоколадки даром!</h3>
+        <section class="main-content__promo-banner-container chocolate-bkg">
+          <h3 class="main-content__heading-3">Шоколадки даром!</h3>
           <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку
             вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
             <a href="#">Хочу шоколадки!</a>
         </section>
       </section>
-      <section class="list-of-hits container">
-        <ul>
-          <li class="hit">
+      <section class="main-content__hits-container container">
+        <ul class="main-content__list-of-hits">
+          <li class="main-content__hit">
             <span>HIT</span>
             <img src="img/1(1).png" alt="ice cream photo">
             <p>310<span>₽/кг</span></p>
             <p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
           </li>
-          <li class="hit">
+          <li class="main-content__hit">
             <span>HIT</span>
             <img src="img/1(2).png" alt="ice cream photo">
             <p>380<span>₽/кг</span></p>
             <p>Сливочно-кофейное с кусочками шоколада</p>
           </li>
-          <li class="hit">
+          <li class="main-content__hit">
             <span>HIT</span>
             <img src="img/1(3).png" alt="ice cream photo">
             <p>355<span>₽/кг</span></p>
             <p>Сливочно-клубничное с присыпкой из белого шоколада</p>
           </li>
-          <li class="hit">
+          <li class="main-content__hit">
             <span>HIT</span>
             <img src="img/2(1).png" alt="ice cream photo">
             <p>415<span>₽/кг</span></p>
