add BEM classes plus make minor refactoring and layout fixes
remove target blank for catalog page from catalog.html, add bem classes for competitive-advantages

--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
       </div>
       <nav class="navigation">
         <ul class="navigation__list">
-            <li><a class="navigation__dropdown" href="catalog.html"  target="_blank">Каталог</a>
+            <li><a class="navigation__dropdown" href="catalog.html">Каталог</a>
               <ul class="navigation__dropdown-items visually-hidden">
                 <li><a href="#">Новинки</a></li>
                 <li><a href="#">Сливочное</a></li>
