--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       </div>
       <nav class="navigation">
         <ul class="navigation__list">
-            <li><a class="navigation__dropdown" href="catalog.html"  target="_blank">Каталог</a>
+            <li><a class="navigation__dropdown" href="catalog.html"
+              target="_blank">Каталог</a>
               <ul class="navigation__dropdown-items visually-hidden">
                 <li><a href="#">Новинки</a></li>
                 <li><a href="#">Сливочное</a></li>
@@ -108,29 +109,29 @@
           </li>
         </ul>
       </section>
-      <article class="competitive-advantages waffle-bkg container">
-        <h2 class="header-h2">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
+      <article class="main-content__competitive-advantages waffle-bkg container">
+        <h2 class="main-content__heading-2">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженного
           собственного производства на развес</h2>
-        <section class="advantages">
-          <div class="advantage">
-            <img src="img/ice-cream.svg" alt="ice cream icon">
+        <section class="main-content__advantages">
+          <div class="main-content__advantage">
+            <img class="main-content__advantage--image" src="img/ice-cream.svg" alt="ice cream icon">
             <p>Все наше мороженое изготавливается на собственном производстве, с
               использованием современного оборудования и проверенных временем
               технологий.</p>
           </div>
-          <div class="advantage">
-            <img src="img/eco.svg" alt="leaf icon">
+          <div class="main-content__advantage">
+            <img class="main-content__advantage--image" src="img/eco.svg" alt="leaf icon">
             <p>Для приготовления мороженого используются настоящие сливки и молоко
               высочайшего качества. Все дополнительные ингредиенты и добавки
               произведены из натурального, экологически чистого сырья.</p>
           </div>
-          <div class="advantage">
-            <img src="img/cow.svg" alt="cow icon">
+          <div class="main-content__advantage">
+            <img class="main-content__advantage--image" src="img/cow.svg" alt="cow icon">
             <p>Закупка ингредиентов  производится только у проверенных фермерских
               хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
           </div>
-          <div class="advantage">
-            <img src="img/thermometer.svg" alt="thermometer icon">
+          <div class="main-content__advantage">
+            <img class="main-content__advantage--image" src="img/thermometer.svg" alt="thermometer icon">
             <p>Доставка нашего мороженого до заказчиков осуществляется в специальном
               термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
           </div>
