add BEM classes to subscribe-and-news and location-info

--- a/index.html
+++ b/index.html
@@ -137,24 +137,24 @@
           </div>
         </section>
       </article>
-      <section class="news-and-subscribtion container">
-        <section class="news strawberry-bkg promo-banner">
-          <h3 class="header-h3">Новое в нашем блоге</h3>
-          <h4 class="header-h4">10 способов сервировки фруктовых щербетов к столу</h4>
+      <section class="main-content__news-and-subscribtion container">
+        <section class="main-content__news strawberry-bkg promo-banner">
+          <h3 class="main-content__heading-3">Новое в нашем блоге</h3>
+          <h4 class="main-content__header-h4">10 способов сервировки фруктовых щербетов к столу</h4>
         </section>
-        <section class="subscribe promo-banner">
-          <p class="subscribe-text">Подпишитесь на нашу сладкую рассылку и будете
+        <section class="main-content__subscribe promo-banner">
+          <p class="main-content__subscribe--text">Подпишитесь на нашу сладкую рассылку и будете
             всегда в курсе всего самого вкусного, что у нас происходит. Обещаем
             не спамить и не слать всякой ненужной ерунды. Честно =) </p>
           <input class="email" type="email" value="email@example.com">
           <button class="btn-send button">Отправить</button>
         </section>
       </section>
-      <section class="main-contact-info">
+      <section class="main-content__contact-info">
         <iframe src="https://yandex.com/map-widget/v1/-/CCsfeZKz" width="100%" height="600" frameborder="1" allowfullscreen="true"></iframe>
         <!-- <img src="img/map.png">  -->
-        <img src="img/pin.svg" alt="pin">
-        <section class="location-info">
+        <img class="main-content__contact-info--image"src="img/pin.svg" alt="pin">
+        <section class="main-content__location-info-card">
           <p>Адрес главного офиса и офлайн-магазина:</p>
           <p><b>ул. Большая Конюшенная 19/8,
             Санкт-Петербург</b></p>
@@ -207,7 +207,7 @@
     </form>
     <!-- obratnaya svyaz' -->
     <form class="visually-hidden">
-      <h4 class="header-h4">Мы обязательно вам ответим!"</h4>
+      <h4 class="main-content__header-h4">Мы обязательно вам ответим!"</h4>
       <input type="text" name="fullname"><br>
       <input class="email" type="email" name="email"><br>
       <textarea name="comments" rows="8" cols="80">В свободной форме
