add BEM classes for footer plus corrections for hero-banner section
classes for

--- a/catalog.html
+++ b/catalog.html
@@ -154,26 +154,26 @@
       </section>
     </main>
     <footer class="footer container">
-      <ul class="social-media-contacts">
-        <li><img src="img/twitter.svg" alt="twitter link"></li>
-        <li><img src="img/instagram.svg" alt="instagram link"></li>
-        <li><img src="img/fb.svg" alt="facebook link"></li>
-        <li><img src="img/vk.svg" alt="vk link"></li>
+      <ul class="social-media-links">
+        <li><img class="social-media-links__image" src="img/twitter.svg" alt="twitter link"></li>
+        <li><img class="social-media-links__image"src="img/instagram.svg" alt="instagram link"></li>
+        <li><img class="social-media-links__image"src="img/fb.svg" alt="facebook link"></li>
+        <li><img class="social-media-links__image"src="img/vk.svg" alt="vk link"></li>
       </ul>
       <div class="business-info">
-        <div>
-          <img src="img/heart.svg" alt="heart">
-          <p><a href="#">Для поставщиков</a></p>
-          <p><a href="#">О производстве</a></p>
+        <div class="business-info__for-distributors-and-about">
+          <img class="business-info__image" src="img/heart.svg" alt="heart">
+          <p><a class="business-info__for-distributors-link" href="#">Для поставщиков</a></p>
+          <p><a class="business-info__about-company-link" href="#">О производстве</a></p>
         </div>
-        <div>
-          <p><a href="#">Наши документы</a></p>
-          <p><a href="#">Экологические стандарты</a></p>
+        <div class="business-info__docs-and-eco-standarts">
+          <p><a class="business-info__our-socs-link" href="#">Наши документы</a></p>
+          <p><a class="business-info__eco-standarts" href="#">Экологические стандарты</a></p>
         </div>
       </div>
       <div class="company-brand">
-        <span>
-          <img src="img/htmlacad-small-logo.png" alt="small html academy logo">
+        <span class="company-brand__image-wrapper">
+          <img class="company-brand__image" src="img/htmlacad-small-logo.png" alt="small html academy logo">
         </span>
         <p>Сделано в <a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a> © 2019</p>
       </div>
