--- a/index.html
+++ b/index.html
@@ -49,25 +49,25 @@
       </div>
     </header>
     <main class="main-content">
-      <section class="main-content__hero-banner container">
-        <div class="main-content__work-hours-and-contact-number">
-          <span class="main-content__work-hours">С 10 до 20, ежедневно</span>
-          <span class="main-content__contact-number">8 812 450-25-25</span>
+      <section class="hero-banner container">
+        <div class="hero-banner__work-hours-and-contact-number">
+          <span class="hero-banner__work-hours">С 10 до 20, ежедневно</span>
+          <span class="hero-banner__contact-number">8 812 450-25-25</span>
         </div>
-        <div class="main-content__hero-image-container">
-          <img class="main-content__hero-image" src="img/cones.png" alt="cones">
+        <div class="hero-banner__hero-image-container">
+          <img class="hero-banner__hero-image" src="img/cones.png" alt="cones">
         </div>
-        <section class="main-content__title-and-action-btn">
-          <h1 class="page-title">Крем-брюле и пломбир с малиновым джемом</h1>
+        <section class="hero-banner__title-and-action-btn">
+          <h1 class="hero-banner__page-title">Крем-брюле и пломбир с малиновым джемом</h1>
           <button class="button" type="button">Давайте оба!</button>
         </section>
-        <div class="main-content__image-slider-controlls">
-          <label class="dot-controller"></label>
-          <label class="dot-controller"></label>
-          <label class="dot-controller"></label>
+        <div class="hero-banner__image-slider-controlls">
+          <label class="hero-banner__image-slider-controlls-controller"></label>
+          <label class="hero-banner__image-slider-controlls-controller"></label>
+          <label class="hero-banner__image-slider-controlls-controller"></label>
         </div>
       </section>
-      <section class="main-content__promo-banners container">
+      <section class="promo-banners container">
         <section class="main-content__promo-banner-container raspberry-bkg">
           <h3 class="main-content__heading-3">Малинка даром!</h3>
           <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш
@@ -166,26 +166,26 @@
       </section>
     </main>
     <footer class="footer container">
-      <ul class="social-media-contacts">
-        <li><img src="img/twitter.svg" alt="twitter link"></li>
-        <li><img src="img/instagram.svg" alt="instagram link"></li>
-        <li><img src="img/fb.svg" alt="facebook link"></li>
-        <li><img src="img/vk.svg" alt="vk link"></li>
+      <ul class="social-media-links">
+        <li><img class="social-media-links__image" src="img/twitter.svg" alt="twitter link"></li>
+        <li><img class="social-media-links__image"src="img/instagram.svg" alt="instagram link"></li>
+        <li><img class="social-media-links__image"src="img/fb.svg" alt="facebook link"></li>
+        <li><img class="social-media-links__image"src="img/vk.svg" alt="vk link"></li>
       </ul>
       <div class="business-info">
-        <div>
-          <img src="img/heart.svg" alt="heart">
-          <p><a href="#">Для поставщиков</a></p>
-          <p><a href="#">О производстве</a></p>
+        <div class="business-info__for-distributors-and-about">
+          <img class="business-info__image" src="img/heart.svg" alt="heart">
+          <p><a class="business-info__for-distributors-link" href="#">Для поставщиков</a></p>
+          <p><a class="business-info__about-company-link" href="#">О производстве</a></p>
         </div>
-        <div>
-          <p><a href="#">Наши документы</a></p>
-          <p><a href="#">Экологические стандарты</a></p>
+        <div class="business-info__docs-and-eco-standarts">
+          <p><a class="business-info__our-socs-link" href="#">Наши документы</a></p>
+          <p><a class="business-info__eco-standarts" href="#">Экологические стандарты</a></p>
         </div>
       </div>
       <div class="company-brand">
-        <span>
-          <img src="img/htmlacad-small-logo.png" alt="small html academy logo">
+        <span class="company-brand__image-wrapper">
+          <img class="company-brand__image" src="img/htmlacad-small-logo.png" alt="small html academy logo">
         </span>
         <p>Сделано в <a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a> © 2019</p>
       </div>
